# LaniakeaSSV

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: model.h  model_interface.h  my_view.h  my_view_interface.h  view.h
include/laniakeassv_mvc/: my_view.h
include/laniakeassv_template/: BUILD_EMCC.h  my_view_interface.h  view.h
include/laniakeassv_utils/: api_response.h  hermes.h
src/: main.cpp  model.cpp  my_view.cpp  view.cpp
src/laniakeassv_mvc/: model.cpp  my_view.cpp
src/laniakeassv_template/: main.cpp
